; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/rme9652/extr_hdspm.c_hdspm_set_system_clock_mode.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/rme9652/extr_hdspm.c_hdspm_set_system_clock_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdspm = type { i32 }

@HDSPM_c0Master = common dso_local global i32 0, align 4
@HDSPM_ClockModeMaster = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hdspm*, i32)* @hdspm_set_system_clock_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hdspm_set_system_clock_mode(%struct.hdspm* %0, i32 %1) #0 {
  %3 = alloca %struct.hdspm*, align 8
  %4 = alloca i32, align 4
  store %struct.hdspm* %0, %struct.hdspm** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.hdspm*, %struct.hdspm** %3, align 8
  %6 = load %struct.hdspm*, %struct.hdspm** %3, align 8
  %7 = call i64 @hdspm_is_raydat_or_aio(%struct.hdspm* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @HDSPM_c0Master, align 4
  br label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @HDSPM_ClockModeMaster, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = phi i32 [ %10, %9 ], [ %12, %11 ]
  %15 = load i32, i32* %4, align 4
  %16 = icmp eq i32 0, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @hdspm_set_toggle_setting(%struct.hdspm* %5, i32 %14, i32 %17)
  ret void
}

declare dso_local i32 @hdspm_set_toggle_setting(%struct.hdspm*, i32, i32) #1

declare dso_local i64 @hdspm_is_raydat_or_aio(%struct.hdspm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
